--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "joi": "^17.4.0",
+    "js-cookie": "^2.2.1",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
     "prop-types": "15.7.2",
