--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "notistack": "^1.0.9",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
