--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@material-ui/core": "^4.12.2",
+    "@spindox/siae-snackbar-notistack": "^1.1.0",
     "axios": "^0.21.1",
     "chalk": "2.4.2",
     "compression": "1.7.4",
