--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
-    "@material-ui/core": "^4.12.2",
+    "@material-ui/core": "^4.9.14",
+    "@spindox/siae-icons-library": "^3.5.4",
     "@spindox/siae-snackbar-notistack": "^1.1.0",
+    "@spindox/siae-theme": "^4.0.0",
     "axios": "^0.21.1",
     "chalk": "2.4.2",
     "compression": "1.7.4",
@@ -96,7 +98,8 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
